--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>You're So Forgetful</h1>
-  <cheerpj-app src="You'reSoForgetfull.jar" mainclass="Main"></cheerpj-app>
+  <cheerpj-app src="You'reSoForgetful.jar" mainclass="Main"></cheerpj-app>
   <script>
     cheerpjInit();
   </script>
