--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>You're So Forgetful</title>
+  <title>Youre So Forgetful</title>
   <script src="https://cheerpj.com/latest/loader.js"></script>
 </head>
 <body>
