--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Youre So Forgetful</title>
-  <script src="https://cheerpj.com/latest/loader.js"></script>
-</head>
-<body>
-  <h1>You're So Forgetful</h1>
-  <cheerpj-app src="You'reSoForgetful.jar" mainclass="Main"></cheerpj-app>
-  <script>
-    cheerpjInit();
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>You're So Forgetful</title>
+    <script src="https://cjrtnc.leaningtech.com/loader.js"></script>
+  </head>
+  <body>
+    <h1>You're So Forgetful</h1>
+    <cheerpj-app src="YoureSoForgetful.jar" mainclass="Main"></cheerpj-app>
+    <script>
+      window.addEventListener('load', () => {
+        cheerpjInit();
+      });
+    </script>
+  </body>
 </html>
