--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>CheerpJ test</title>
+    <title>You're So Forgetful</title>
     <script src="https://cjrtnc.leaningtech.com/3.1/cj3loader.js"></script>
   </head>
   <body>
@@ -10,7 +10,7 @@
       (async function () {
         await cheerpjInit();
         cheerpjCreateDisplay(800, 600);
-        await cheerpjRunJar("YoureSoForgetful.jar");
+        await cheerpjRunJar("forgetful.jar");
       })();
     </script>
   </body>
