--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       (async function () {
         await cheerpjInit();
         cheerpjCreateDisplay(800, 600);
-        await cheerpjRunJar("game.jar");
+        await cheerpjRunJar("/app/game.jar");
       })();
     </script>
   </body>
