--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>You're So Forgetful</title>
-    <script src="https://cjrtnc.leaningtech.com/3.1/cj3loader.js"></script>
+    <script src="https://cheerpj.com/latest/loader.js"></script>
   </head>
   <body>
+    <h1>You're So Forgetful</h1>
     <script>
       (async function () {
         await cheerpjInit();
-        cheerpjCreateDisplay(800, 600);
-        await cheerpjRunJar("game.jar");
+        await cheerpjRunJar("game.jar", "Main");
       })();
     </script>
   </body>
