--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       (async function () {
         await cheerpjInit();
         cheerpjCreateDisplay(800, 600);
-        await cheerpjRunJar("game.jar");
-      })();
+        await cheerpjRunJar("/apps/game.jar");
     </script>
   </body>
 </html>
