--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       (async function () {
         await cheerpjInit();
         cheerpjCreateDisplay(800, 600);
-        await cheerpjRunJar("/you-resoforgetful/game.jar", "Main");
+        await cheerpjRunJar("game.jar", "Main");
         })();
     </script>
   </body>
