--- a/index.html
+++ b/index.html
@@ -4,15 +4,35 @@
     <meta charset="utf-8" />
     <title>You're So Forgetful</title>
     <script src="https://cjrtnc.leaningtech.com/3.1/cj3loader.js"></script>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+      }
+    </style>
   </head>
   <body>
-
     <script>
-      (async function () {
+      let display;
+
+      async function runGame() {
         await cheerpjInit();
-        cheerpjCreateDisplay(800, 600);
+        display = cheerpjCreateDisplay(window.innerWidth, window.innerHeight);
         await cheerpjRunJar("game.jar", "Main");
-        })();
+      }
+
+      window.addEventListener("resize", () => {
+        if (display) {
+          // Resize the canvas element dynamically
+          display.style.width = window.innerWidth + "px";
+          display.style.height = window.innerHeight + "px";
+        }
+      });
+
+      runGame();
     </script>
   </body>
 </html>
