--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>You're So Forgetful</title>
-    <script src="https://cjrtnc.leaningtech.com/3.1/cj3loader.js"></script>
+    <script src="https://cjrtnc.leaningtech.com/4.0/loader.js"></script>
     <style>
       html, body {
         margin: 0;
@@ -28,7 +28,7 @@
         await cheerpjInit();
         createCheerpjDisplay();
         if (!jarStarted) {
-          await cheerpjRunJar("game.jar", "Main");
+          await cheerpjRunJar("/app/SwingHTMLBrowser.jar", "Main");
           jarStarted = true;
         }
       }
