--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         await cheerpjInit();
         createCheerpjDisplay();
         if (!jarStarted) {
-          await cheerpjRunJar("/app/SwingHTMLBrowser.jar", "Main");
+          await cheerpjRunJar("SwingHTMLBrowser.jar", "Main");
           jarStarted = true;
         }
       }
