--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Browser</title>
-    <script src="https://cjrtnc.leaningtech.com/4.0/loader.js"></script>
-  </head>
-  <body>
-    <script>
-      (async function () {
-        await cheerpjInit(); // No Tailscale key here
-        cheerpjCreateDisplay(800, 600);
-        await cheerpjRunJar("SwingHTMLBrowser.jar");
-      })();
-    </script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Java Game on the Web</title>
+  <script src="https://cjrtnc.leaningtech.com/4.0/loader.js"></script>
+</head>
+<body>
+  <h1>Loading Java App...</h1>
+  <script>
+    (async function () {
+      await cheerpjInit();
+      cheerpjCreateDisplay(800, 600);
+      await cheerpjRunJar("/app/MyGame.jar"); // Make sure to use "/app/"
+    })();
+  </script>
+</body>
 </html>
