--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     (async function () {
       await cheerpjInit();
       cheerpjCreateDisplay(800, 600);
-      await cheerpjRunJar("/app/SwingHTMLBrowser.jar"); // Make sure to use "/app/"
+      await cheerpjRunJar("/app/you-resoforgetful/SwingHTMLBrowser.jar"); // Make sure to use "/app/"
     })();
   </script>
 </body>
