--- a/index.html
+++ b/index.html
@@ -2,17 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Java Game on the Web</title>
+  <title>You're So Forgetful</title>
   <script src="https://cjrtnc.leaningtech.com/4.0/loader.js"></script>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+    }
+    #cheerpjDisplay {
+      width: 100vw;
+      height: 100vh;
+      display: block;
+    }
+  </style>
 </head>
 <body>
-  <h1>Loading Java App...</h1>
   <script>
     (async function () {
       await cheerpjInit();
-      cheerpjCreateDisplay(800, 600);
-      await cheerpjRunJar("/app/you-resoforgetful/SwingHTMLBrowser.jar"); // Make sure to use "/app/"
+      // Make the display use full window size
+      cheerpjCreateDisplay(window.innerWidth, window.innerHeight);
+      await cheerpjRunJar("/app/you-resoforgetful/game.jar");
     })();
+
+    // Optional: Resize dynamically if the window changes
+    window.addEventListener("resize", () => {
+      const canvas = document.getElementById("cheerpjDisplay");
+      if (canvas) {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+      }
+    });
   </script>
 </body>
 </html>
