--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
       height: 100vh;
       display: block;
     }
+  @font-face {
+    font-family: 'Courier New';
+    src: url('fonts/CourierNew.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Monospaced';
+    src: url('fonts/Monospaced.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Dialog';
+    src: url('fonts/Dialog.ttf') format('truetype');
+  }
+
+  body {
+    font-family: 'Courier New', monospace;
+  }
+</style>
+
   </style>
 </head>
 <body>
