--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     }
   @font-face {
     font-family: 'Courier New';
-    src: url('fonts/CourierNew.ttf') format('truetype');
+    src: url('fonts/couri.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Monospaced';
-    src: url('fonts/Monospaced.ttf') format('truetype');
+    src: url('fonts/monospaced.ttf') format('truetype');
   }
 
   @font-face {
