--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     src: url('fonts/monospaced.ttf') format('truetype');
   }
 
-  @font-face {
-    font-family: 'Dialog';
-    src: url('fonts/Dialog.ttf') format('truetype');
-  }
+ // @font-face {
+   // font-family: 'Dialog';
+    //src: url('fonts/Dialog.ttf') format('truetype');
+  // }
 
   body {
     font-family: 'Courier New', monospace;
