--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
   @font-face {
     font-family: 'Monospaced';
-    src: url('fonts/monospaced.ttf') format('truetype');
+    src: url('/app/you-resoforgetful/fonts/monospaced.ttf') format('truetype');
   }
 
  // @font-face {
    // font-family: 'Dialog';
-    //src: url('fonts/Dialog.ttf') format('truetype');
+    //src: url('/app/you-resoforgetful/fonts/Dialog.ttf') format('truetype');
   // }
 
   body {
