--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title>You're So Forgetful</title>
   <script src="https://cjrtnc.leaningtech.com/4.0/loader.js"></script>
+  
   <style>
     html, body {
       margin: 0;
@@ -41,6 +42,8 @@
 </head>
 <body>
   <script>
+    cheerpjInit({ resourceBaseUrl: "https://cjrtnc.leaningtech.com/4.0/", version: 11 });
+
     (async function () {
       // ✅ Set Java version to 11
       await cheerpjInit({version: 11});
