--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>You're So Forgetful</title>
-
+  <script src="https://cjrtnc.leaningtech.com/4.0/loader.js"></script>
   
   <style>
     html, body {
@@ -42,8 +42,6 @@
 </head>
 <body>
   <script>
-    cheerpjInit({ resourceBaseUrl: "https://cjrtnc.leaningtech.com/4.0/", version: 11 });
-
     (async function () {
       // ✅ Set Java version to 11
       await cheerpjInit({version: 11});
