--- a/index.html
+++ b/index.html
@@ -1,61 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>You're So Forgetful</title>
-  <script src="https://cjrtnc.leaningtech.com/4.0/loader.js"></script>
-  
   <style>
-    html, body {
+    body, html {
       margin: 0;
       padding: 0;
+      height: 100%;
       overflow: hidden;
+      font-family: Arial, sans-serif;
+    }
+
+    .background {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
+      background: url('background.gif') no-repeat center center/cover;
+      filter: blur(3px);
+      z-index: -1;
     }
-    #cheerpjDisplay {
-      width: 100vw;
-      height: 100vh;
-      display: block;
+
+    .center-button {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
-  @font-face {
-    font-family: 'Courier New';
-    src: url('fonts/couri.ttf') format('truetype');
-  }
 
-  @font-face {
-    font-family: 'Monospaced';
-    src: url('/app/you-resoforgetful/fonts/monospaced.ttf') format('truetype');
-  }
+    .launch-btn {
+      background-color: #00ff00;
+      color: black;
+      border: none;
+      padding: 20px 40px;
+      font-size: 24px;
+      cursor: pointer;
+      border-radius: 10px;
+      transition: background-color 0.3s ease;
+    }
 
- // @font-face {
-   // font-family: 'Dialog';
-    //src: url('/app/you-resoforgetful/fonts/Dialog.ttf') format('truetype');
-  // }
-
-  body {
-    font-family: 'Courier New', monospace;
-  }
-</style>
-
+    .launch-btn:hover {
+      background-color: #00cc00;
+    }
   </style>
 </head>
 <body>
-  <script>
-    (async function () {
-      // ✅ Set Java version to 11
-      await cheerpjInit({version: 11});
-      cheerpjCreateDisplay(window.innerWidth, window.innerHeight);
-      await cheerpjRunJar("/app/you-resoforgetful/yoursoforgetful.jar");
-    })();
-
-    window.addEventListener("resize", () => {
-      const canvas = document.getElementById("cheerpjDisplay");
-      if (canvas) {
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-      }
-    });
-  </script>
+  <div class="background"></div>
+  <div class="center-button">
+    <button class="launch-btn" onclick="window.open('https://lukebuonanno.github.io/you-resoforgetful/game.html', '_blank')">
+      Launch Game
+    </button>
+  </div>
 </body>
 </html>
