--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       width: 100%;
       height: 100%;
       background: url('background.gif') no-repeat center center/cover;
+      background-size: contain;
       filter: blur(3px);
       z-index: -1;
     }
