--- a/index.html
+++ b/index.html
@@ -57,7 +57,17 @@
   </div>
 
   <script>
-    function launchGame() {
+    async function launchGame() {
+      // Try to go fullscreen when the user clicks the button
+      if (document.documentElement.requestFullscreen) {
+        await document.documentElement.requestFullscreen();
+      } else if (document.documentElement.webkitRequestFullscreen) { // Safari
+        await document.documentElement.webkitRequestFullscreen();
+      } else if (document.documentElement.msRequestFullscreen) { // IE11
+        await document.documentElement.msRequestFullscreen();
+      }
+
+      // After fullscreen, navigate to the game
       window.location.href = 'https://lukebuonanno.github.io/you-resoforgetful/game.html';
     }
   </script>
