--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
     <script>
       (async function () {
         await cheerpjInit({ version: 11 });
-        cheerpjCreateDisplay(-1, -1, document.body);
+        cheerpjCreateDisplay(-1, -1y);
         await cheerpjRunJar("/app/you-resoforgetful/yoursoforgetful-cleaned.jar");
         
       })();
