--- a/game.html
+++ b/game.html
@@ -2,25 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Browser</title>
+    <title></title>
     <script src="https://cjrtnc.leaningtech.com/4.0/loader.js"></script>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background-color: black;
+      }
+    </style>
   </head>
   <body>
     <script>
       (async function () {
         await cheerpjInit({ version: 11 });
-        const displayElement = cheerpjCreateDisplay(-1, -1, document.body);
-        
-        // Request fullscreen
-        if (displayElement.requestFullscreen) {
-          displayElement.requestFullscreen();
-        } else if (displayElement.webkitRequestFullscreen) { // Safari
-          displayElement.webkitRequestFullscreen();
-        } else if (displayElement.msRequestFullscreen) { // IE11
-          displayElement.msRequestFullscreen();
-        }
-
-        // Run your JAR
+        cheerpjCreateDisplay(-1, -1, document.body);
         await cheerpjRunJar("/app/you-resoforgetful/yoursoforgetful.jar");
       })();
     </script>
